# cutil

./: assert.hpp  charconv.hpp  coroutine.hpp  empty.hpp  error.hpp  event.hpp  fd.hpp  meson.build  misc.hpp  print.hpp  process.hpp  string-map.hpp  thread.hpp  timer-event.hpp  variant.hpp
src/: _prologue.hpp  argument-parser-test.cpp  argument-parser.hpp  assert-test.cpp  assert.hpp  charconv-test.cpp  charconv.hpp  cleaner.hpp  comptime-charconv.hpp  comptime-string-test.cpp  comptime-string.hpp  concat.hpp  container-of.hpp  coroutine-test.cpp  coroutine.hpp  critical.hpp  empty.hpp  error.hpp  event-fd.hpp  event.hpp  fd.hpp  file-io.hpp  hexdump.hpp  light-map-test.cpp  light-map.hpp  location-print.hpp  lock-print.hpp  logger-pre.hpp  logger-test.cpp  logger.hpp  make-array-test.cpp  make-array.hpp  misc.hpp  multi-event-test.cpp  multi-event.hpp  pair-table-test.cpp  pair-table.hpp  pointer-format.hpp  prependable-buffer-test.cpp  prependable-buffer.hpp  (+22 more)
