project('cutil', 'cpp', version : '0.0', default_options : ['warning_level=3', 'werror=false', 'cpp_std=c++23'])
add_project_arguments('-Wfatal-errors', language: 'cpp')

executable('charconv-test', files('src/charconv-test.cpp'))
executable('variant-test', files('src/variant-test.cpp'))
executable('multi-event-test', files('src/multi-event-test.cpp'))
executable('pair-table-test', files('src/pair-table-test.cpp'))
executable('rcu-test', files('src/rcu-test.cpp'))
executable('argument-parser-test', files('src/argument-parser-test.cpp'))
executable('split-test', files('src/split-test.cpp'))
executable('random-test', files('src/random-test.cpp'))
executable('coroutine-test', files('src/coroutine-test.cpp'))
executable('comptime-string-test', files('src/comptime-string-test.cpp'))
